# MiisendU-Wii-U

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENCE.md  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  update.sh
meta/: meta.xml
source/: console.c  console.h  main.c  main.cpp  main.h  program.c  program.h  screen_utils.c  screen_utils.h  udp.c  udp.cpp  udp.h  vpad_to_json.cpp  vpad_to_json.h
src/: link.ld  program.c  program.h  screen_utils.c  screen_utils.h  udp.c  udp.h  vpad_to_json.cpp  vpad_to_json.h
src/dynamic_libs/: acp_functions.c  acp_functions.h  aoc_functions.c  aoc_functions.h  ax_functions.c  ax_functions.h  curl_functions.c  curl_functions.h  fs_defs.h  fs_functions.c  fs_functions.h  gx2_functions.c  gx2_functions.h  gx2_types.h  nfp_functions.c  nfp_functions.h  nn_act_functions.c  nn_act_functions.h  nn_fp_functions.c  nn_fp_functions.h  nn_nim_functions.c  nn_nim_functions.h  nn_save_functions.c  nn_save_functions.h  ntag_functions.c  ntag_functions.h  os_defs.h  os_functions.c  os_functions.h  os_types.h  padscore_functions.c  padscore_functions.h  proc_ui_functions.c  proc_ui_functions.h  socket_functions.c  socket_functions.h  sys_functions.c  sys_functions.h  syshid_functions.c  syshid_functions.h  (+2 more)
src/libutils/fs/: CFile.cpp  CFile.hpp  DirList.cpp  DirList.h  FSOSUtils.cpp  FSOSUtils.h  FSUtils.cpp  FSUtils.h  disc_io.h  sd_fat_devoptab.cpp  sd_fat_devoptab.h
src/libutils/kernel/: kernel_defs.h  kernel_utils.c  kernel_utils.h  syscalls.h  syscalls_asm.s
src/libutils/language/: gettext.cpp  gettext.h
src/libutils/network/: FileDownloader.cpp  FileDownloader.h
src/libutils/system/: AsyncDeleter.cpp  AsyncDeleter.h  CMutex.h  CThread.h  exception_handler.c  memory.c
src/libutils/utils/: StringTools.cpp  StringTools.h  TCPServer.cpp  TCPServer.hpp  function_patcher.cpp  function_patcher.h  logger.c  logger.h  net.c  net.h  utils.h  utils_asm.s
src/system/: memory.c
src/utils/: logger.c  logger.h
